--- a/demojpa/src/main/resources/templates/layout/loginLayout.html
+++ b/demojpa/src/main/resources/templates/layout/loginLayout.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
@@ -11,17 +10,13 @@
 	rel="stylesheet"/>	
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"/>
 <link th:href="@{/css/app.css}" rel="stylesheet"/>
-<title>KB Book</title>
+<title>KB Book Login</title>
 </head>
+
 <body>
-	<div th:replace="~{fragments/sidebar :: sidebar}"></div>
 	<div layout:fragment="content">
-		<p>여기에 컨텐츠가 옵니다</p>
+	
 	</div>
 	<script th:src="@{/webjars/bootstrap/5.1.3/js/bootstrap.bundle.min.js}"></script>
 </body>
 </html>
-
-
-
-
